--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,15 @@
 {
-    "rewrites": [{ "source": "/send/(.*)", "destination": "/send" }]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/send",
+      "dest": "/index.js"
+    }
+  ]
+}
